// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMap Component renders without crashing when all data is passed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GoogleMap
    height="50vh"
    location="Las Vegas, NV"
    width="50vw"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <GoogleMap
        bootstrapURLKeys={
          Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          }
        }
        center={
          Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          }
        }
        debounced={true}
        distanceToMouse={[Function]}
        googleMapLoader={[Function]}
        heatmap={Object {}}
        heatmapLibrary={false}
        hoverDistance={30}
        layerTypes={Array []}
        options={[Function]}
        style={
          Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        yesIWantToUseGoogleMapApiInternals={false}
        zoom={11}
      />,
      "style": Object {
        "height": "50vh",
        "width": "50vw",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bootstrapURLKeys": Object {
          "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
        },
        "center": Object {
          "lat": 45.6272259,
          "lng": -122.6727305,
        },
        "debounced": true,
        "defaultCenter": undefined,
        "defaultZoom": undefined,
        "distanceToMouse": [Function],
        "googleMapLoader": [Function],
        "heatmap": Object {},
        "heatmapLibrary": false,
        "hoverDistance": 30,
        "layerTypes": Array [],
        "options": [Function],
        "style": Object {
          "height": "100%",
          "margin": 0,
          "padding": 0,
          "position": "relative",
          "width": "100%",
        },
        "yesIWantToUseGoogleMapApiInternals": false,
        "zoom": 11,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <GoogleMap
          bootstrapURLKeys={
            Object {
              "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
            }
          }
          center={
            Object {
              "lat": 45.6272259,
              "lng": -122.6727305,
            }
          }
          debounced={true}
          distanceToMouse={[Function]}
          googleMapLoader={[Function]}
          heatmap={Object {}}
          heatmapLibrary={false}
          hoverDistance={30}
          layerTypes={Array []}
          options={[Function]}
          style={
            Object {
              "height": "100%",
              "margin": 0,
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          yesIWantToUseGoogleMapApiInternals={false}
          zoom={11}
        />,
        "style": Object {
          "height": "50vh",
          "width": "50vw",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bootstrapURLKeys": Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          },
          "center": Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          },
          "debounced": true,
          "defaultCenter": undefined,
          "defaultZoom": undefined,
          "distanceToMouse": [Function],
          "googleMapLoader": [Function],
          "heatmap": Object {},
          "heatmapLibrary": false,
          "hoverDistance": 30,
          "layerTypes": Array [],
          "options": [Function],
          "style": Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          },
          "yesIWantToUseGoogleMapApiInternals": false,
          "zoom": 11,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`GoogleMap Component renders without crashing when height is passed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GoogleMap
    height="50vh"
    location="Las Vegas, NV"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <GoogleMap
        bootstrapURLKeys={
          Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          }
        }
        center={
          Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          }
        }
        debounced={true}
        distanceToMouse={[Function]}
        googleMapLoader={[Function]}
        heatmap={Object {}}
        heatmapLibrary={false}
        hoverDistance={30}
        layerTypes={Array []}
        options={[Function]}
        style={
          Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        yesIWantToUseGoogleMapApiInternals={false}
        zoom={11}
      />,
      "style": Object {
        "height": "50vh",
        "width": "30vmax",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bootstrapURLKeys": Object {
          "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
        },
        "center": Object {
          "lat": 45.6272259,
          "lng": -122.6727305,
        },
        "debounced": true,
        "defaultCenter": undefined,
        "defaultZoom": undefined,
        "distanceToMouse": [Function],
        "googleMapLoader": [Function],
        "heatmap": Object {},
        "heatmapLibrary": false,
        "hoverDistance": 30,
        "layerTypes": Array [],
        "options": [Function],
        "style": Object {
          "height": "100%",
          "margin": 0,
          "padding": 0,
          "position": "relative",
          "width": "100%",
        },
        "yesIWantToUseGoogleMapApiInternals": false,
        "zoom": 11,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <GoogleMap
          bootstrapURLKeys={
            Object {
              "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
            }
          }
          center={
            Object {
              "lat": 45.6272259,
              "lng": -122.6727305,
            }
          }
          debounced={true}
          distanceToMouse={[Function]}
          googleMapLoader={[Function]}
          heatmap={Object {}}
          heatmapLibrary={false}
          hoverDistance={30}
          layerTypes={Array []}
          options={[Function]}
          style={
            Object {
              "height": "100%",
              "margin": 0,
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          yesIWantToUseGoogleMapApiInternals={false}
          zoom={11}
        />,
        "style": Object {
          "height": "50vh",
          "width": "30vmax",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bootstrapURLKeys": Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          },
          "center": Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          },
          "debounced": true,
          "defaultCenter": undefined,
          "defaultZoom": undefined,
          "distanceToMouse": [Function],
          "googleMapLoader": [Function],
          "heatmap": Object {},
          "heatmapLibrary": false,
          "hoverDistance": 30,
          "layerTypes": Array [],
          "options": [Function],
          "style": Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          },
          "yesIWantToUseGoogleMapApiInternals": false,
          "zoom": 11,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`GoogleMap Component renders without crashing when location is not passed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GoogleMap />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <GoogleMap
        bootstrapURLKeys={
          Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          }
        }
        center={
          Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          }
        }
        debounced={true}
        distanceToMouse={[Function]}
        googleMapLoader={[Function]}
        heatmap={Object {}}
        heatmapLibrary={false}
        hoverDistance={30}
        layerTypes={Array []}
        options={[Function]}
        style={
          Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        yesIWantToUseGoogleMapApiInternals={false}
        zoom={11}
      />,
      "style": Object {
        "height": "20vmax",
        "width": "30vmax",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bootstrapURLKeys": Object {
          "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
        },
        "center": Object {
          "lat": 45.6272259,
          "lng": -122.6727305,
        },
        "debounced": true,
        "defaultCenter": undefined,
        "defaultZoom": undefined,
        "distanceToMouse": [Function],
        "googleMapLoader": [Function],
        "heatmap": Object {},
        "heatmapLibrary": false,
        "hoverDistance": 30,
        "layerTypes": Array [],
        "options": [Function],
        "style": Object {
          "height": "100%",
          "margin": 0,
          "padding": 0,
          "position": "relative",
          "width": "100%",
        },
        "yesIWantToUseGoogleMapApiInternals": false,
        "zoom": 11,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <GoogleMap
          bootstrapURLKeys={
            Object {
              "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
            }
          }
          center={
            Object {
              "lat": 45.6272259,
              "lng": -122.6727305,
            }
          }
          debounced={true}
          distanceToMouse={[Function]}
          googleMapLoader={[Function]}
          heatmap={Object {}}
          heatmapLibrary={false}
          hoverDistance={30}
          layerTypes={Array []}
          options={[Function]}
          style={
            Object {
              "height": "100%",
              "margin": 0,
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          yesIWantToUseGoogleMapApiInternals={false}
          zoom={11}
        />,
        "style": Object {
          "height": "20vmax",
          "width": "30vmax",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bootstrapURLKeys": Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          },
          "center": Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          },
          "debounced": true,
          "defaultCenter": undefined,
          "defaultZoom": undefined,
          "distanceToMouse": [Function],
          "googleMapLoader": [Function],
          "heatmap": Object {},
          "heatmapLibrary": false,
          "hoverDistance": 30,
          "layerTypes": Array [],
          "options": [Function],
          "style": Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          },
          "yesIWantToUseGoogleMapApiInternals": false,
          "zoom": 11,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`GoogleMap Component renders without crashing when location is passed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GoogleMap
    location="Las Vegas, NV"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <GoogleMap
        bootstrapURLKeys={
          Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          }
        }
        center={
          Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          }
        }
        debounced={true}
        distanceToMouse={[Function]}
        googleMapLoader={[Function]}
        heatmap={Object {}}
        heatmapLibrary={false}
        hoverDistance={30}
        layerTypes={Array []}
        options={[Function]}
        style={
          Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        yesIWantToUseGoogleMapApiInternals={false}
        zoom={11}
      />,
      "style": Object {
        "height": "20vmax",
        "width": "30vmax",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bootstrapURLKeys": Object {
          "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
        },
        "center": Object {
          "lat": 45.6272259,
          "lng": -122.6727305,
        },
        "debounced": true,
        "defaultCenter": undefined,
        "defaultZoom": undefined,
        "distanceToMouse": [Function],
        "googleMapLoader": [Function],
        "heatmap": Object {},
        "heatmapLibrary": false,
        "hoverDistance": 30,
        "layerTypes": Array [],
        "options": [Function],
        "style": Object {
          "height": "100%",
          "margin": 0,
          "padding": 0,
          "position": "relative",
          "width": "100%",
        },
        "yesIWantToUseGoogleMapApiInternals": false,
        "zoom": 11,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <GoogleMap
          bootstrapURLKeys={
            Object {
              "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
            }
          }
          center={
            Object {
              "lat": 45.6272259,
              "lng": -122.6727305,
            }
          }
          debounced={true}
          distanceToMouse={[Function]}
          googleMapLoader={[Function]}
          heatmap={Object {}}
          heatmapLibrary={false}
          hoverDistance={30}
          layerTypes={Array []}
          options={[Function]}
          style={
            Object {
              "height": "100%",
              "margin": 0,
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          yesIWantToUseGoogleMapApiInternals={false}
          zoom={11}
        />,
        "style": Object {
          "height": "20vmax",
          "width": "30vmax",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bootstrapURLKeys": Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          },
          "center": Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          },
          "debounced": true,
          "defaultCenter": undefined,
          "defaultZoom": undefined,
          "distanceToMouse": [Function],
          "googleMapLoader": [Function],
          "heatmap": Object {},
          "heatmapLibrary": false,
          "hoverDistance": 30,
          "layerTypes": Array [],
          "options": [Function],
          "style": Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          },
          "yesIWantToUseGoogleMapApiInternals": false,
          "zoom": 11,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`GoogleMap Component renders without crashing when width is passed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GoogleMap
    location="Las Vegas, NV"
    width="50vw"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <GoogleMap
        bootstrapURLKeys={
          Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          }
        }
        center={
          Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          }
        }
        debounced={true}
        distanceToMouse={[Function]}
        googleMapLoader={[Function]}
        heatmap={Object {}}
        heatmapLibrary={false}
        hoverDistance={30}
        layerTypes={Array []}
        options={[Function]}
        style={
          Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          }
        }
        yesIWantToUseGoogleMapApiInternals={false}
        zoom={11}
      />,
      "style": Object {
        "height": "20vmax",
        "width": "50vw",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bootstrapURLKeys": Object {
          "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
        },
        "center": Object {
          "lat": 45.6272259,
          "lng": -122.6727305,
        },
        "debounced": true,
        "defaultCenter": undefined,
        "defaultZoom": undefined,
        "distanceToMouse": [Function],
        "googleMapLoader": [Function],
        "heatmap": Object {},
        "heatmapLibrary": false,
        "hoverDistance": 30,
        "layerTypes": Array [],
        "options": [Function],
        "style": Object {
          "height": "100%",
          "margin": 0,
          "padding": 0,
          "position": "relative",
          "width": "100%",
        },
        "yesIWantToUseGoogleMapApiInternals": false,
        "zoom": 11,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <GoogleMap
          bootstrapURLKeys={
            Object {
              "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
            }
          }
          center={
            Object {
              "lat": 45.6272259,
              "lng": -122.6727305,
            }
          }
          debounced={true}
          distanceToMouse={[Function]}
          googleMapLoader={[Function]}
          heatmap={Object {}}
          heatmapLibrary={false}
          hoverDistance={30}
          layerTypes={Array []}
          options={[Function]}
          style={
            Object {
              "height": "100%",
              "margin": 0,
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          yesIWantToUseGoogleMapApiInternals={false}
          zoom={11}
        />,
        "style": Object {
          "height": "20vmax",
          "width": "50vw",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bootstrapURLKeys": Object {
            "key": "AIzaSyCB1RaEoOoDKQ8oaJ4mZvBlCb0DKeV7qh8",
          },
          "center": Object {
            "lat": 45.6272259,
            "lng": -122.6727305,
          },
          "debounced": true,
          "defaultCenter": undefined,
          "defaultZoom": undefined,
          "distanceToMouse": [Function],
          "googleMapLoader": [Function],
          "heatmap": Object {},
          "heatmapLibrary": false,
          "hoverDistance": 30,
          "layerTypes": Array [],
          "options": [Function],
          "style": Object {
            "height": "100%",
            "margin": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
          },
          "yesIWantToUseGoogleMapApiInternals": false,
          "zoom": 11,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
